# codespaces-blank

./: .gitignore  CMakeLists.txt  Doxyfile  Increment.cmake  Kconfig  README.md  Tools.cmake  apt_installer.sh
.github/workflows/: cmake-multi-platform.yml
gitpod_tools/: install_and_start.sh
image/: CMakeLists.txt
scripts/: build_disk.py  gui_debug.sh
src/: CMakeLists.txt
src/bootloader/: CMakeLists.txt
src/bootloader/stage1/: CMakeLists.txt  boot.asm  config.inc  debug.ld  linker.ld
src/bootloader/stage2/: CMakeLists.txt  Main.cpp  crti.asm  crtn.asm  disk.cpp  disk.h  entry.asm  linker.ld  mbr.cpp  mbr.h  stdint.h  stdio.cpp  stdio.h  string.cpp  string.h
src/bootloader/stage2/16-Real/: Stage2-Entry.asm  memory-detect.asm
src/bootloader/stage2/32-Prot/: Stage2-ProtEnter.asm
src/bootloader/stage2/64-Long/: Stage2-LongEnter.asm
src/bootloader/stage2/arch/x86/: ata.cpp  ata.h  idt-a.asm  idt.cpp  idt.h  io.asm  io.h  pic.h
src/bootloader/stage2/arch/x86-64/: ata.cpp  ata.h  idt.cpp  idt.h  io.h  pic.cpp
src/bootloader/stage2/fs/FAT/: fat.cpp  fat.h
src/bootloader/stage2/memory/: memory.cpp  memory.h  paging.cpp  paging.h
tmp/: kernel.elf  stage2.elf
